bug: spacing of list items when wrapping
- tried padding but didn't fix it

--- a/code/css/stylesheet.css
+++ b/code/css/stylesheet.css
@@ -15,9 +15,7 @@ body,html {
 }
 
 body {
-    /* Experimental */
     background-color: rgb(255,255,255);
-    
     background-size:cover;
     background-attachment:fixed;
     box-sizing:border-box;
@@ -261,6 +259,8 @@ p, h3, li {
 @media only screen and (max-width: 760px) {
     .copy {
     background-color: #f5f5f5;
+    z-index: 4;
+    -webkit-transform: translate3d(0,0,0);
     }
 }
 
@@ -298,7 +298,7 @@ li {
     font-family: 'Inconsolata', Courier, monospace;
     font-size: 0.85em;
     letter-spacing: 0.02em;
-    line-height: 1.5;
+    margin-bottom: 1px;
     list-style-type: none;
     }
 
